# llm-wiki

./: .env.example  .gitignore  Makefile  README.md  cli.py  docker-compose.yml  pyproject.toml
api/: __init__.py  main.py
api/routers/: collect_router.py  crawl_router.py  kb_router.py  process_router.py  search_router.py  wiki_router.py
collector/: electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json
collector/src/main/: index.ts  ipc.ts
collector/src/preload/: index.ts
collector/src/renderer/: index.html
collector/src/renderer/src/: App.vue  env.d.ts  main.ts
docs/: 00-项目总览.md  01-技术选型.md  02-数据模型.md  03-数据采集层.md  04-LLM处理流水线.md  05-知识图谱存储.md  06-检索引擎.md  07-API接口.md  08-前端UI.md  09-MCP服务.md  10-部署方案.md  11-智能采集Agent架构.md  数据采集设计方案.md
scripts/: dev.sh  stop.sh
src/: __init__.py  config.py  crawl_queue.py  llm.py  models.py  pipeline.py  storage.py
src/crawler/: __init__.py
src/indexer/: __init__.py  indexer.py
src/inspector/: __init__.py  tier0.py
src/mcp/: __init__.py  server.py
src/processor/: __init__.py  entity_concept_extractor.py  image_downloader.py  index_builder.py  page_builder.py  source_processor.py
src/retriever/: __init__.py  retriever.py
web/: components.d.ts  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.vue  main.ts
web/src/api/: index.ts
web/src/assets/: main.css
web/src/router/: index.ts
web/src/stores/: kb.ts
web/src/views/: DocumentsView.vue  GraphView.vue  HomeView.vue  PipelineView.vue  SearchView.vue  WikiView.vue
(+13 files in other folders)
