[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-wiki"
version = "0.1.0"
description = "AI-powered LLM Wiki knowledge base — powered by Qwen + Milvus"
requires-python = ">=3.11"
dependencies = [
    # LLM + Embedding（DashScope OpenAI 兼容接口）
    "openai>=1.54.0",
    # Web 爬虫
    "httpx>=0.27.0",
    "trafilatura>=1.12.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "playwright>=1.45.0",
    # 向量数据库
    "pymilvus>=2.4.0",
    # API 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1.0",
    # 数据模型 & 配置
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
    # CLI
    "typer>=0.12.0",
    "rich>=13.9.0",
    # 工具
    "aiofiles>=24.1.0",
    "tenacity>=9.0.0",
    "markdown-it-py>=3.0.0",
    # PDF 解析（collect_router 文件上传用）
    "pdfminer.six>=20221105",
    # MCP 服务器
    "mcp>=1.3.0",
]

[project.scripts]
llm-wiki = "cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src", "api"]

[tool.ruff]
line-length = 100
target-version = "py311"
